# STACCLI

./: .gitignore  README.md  environment-test.yaml  environment-test.yml  environment.yaml  environment.yml  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
.github/workflows/: continuous-integration.yaml  continuous-integration.yml
src/cog/: cog_utils.py  utils.py
src/stac/: cog_utils.py  planetary_computer.py  planetary_computer_client.py  stac_parameter_parser.py  stac_utils.py  utils.py
tests/: test_cog_utils.py  test_entrypoint.py  test_parsers.py  test_planetary_token.py  test_stac_items.json  test_stac_utils.py
