[project]
name = "rgb"
version = "0.1.0"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "ruff>=0.3.4,<0.4",
    "pre-commit>=3.6.2,<4.0"
]

[tool.isort]
profile = "black"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"